work with mistakes

--- a/index.html
+++ b/index.html
@@ -429,5 +429,14 @@
         </div>
       </div>
     </footer>
+
+       <!-- Modal window -->
+
+    <div class="backdrop">
+      <div class="modal">
+         <button type="button" class="modal-close-btn"> </button>
+      </div>
+
+    </div>
   </body>
 </html>
