--- a/portfolio.html
+++ b/portfolio.html
@@ -83,12 +83,17 @@
           <ul class="list card-list">
             <li class="card-item">
               <a href="#" class="link link-card"
-                ><img
+                >
+                <div class="card-img-wrapper">
+                 <img
                   src="./images/BankingApp.jpg"
                   alt="Banking App Interface Concept"
                   width="360"
                   height="300"
                 />
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+                </div> 
                 <div class="card-item-name">
                   <h2 class="card-title">Banking App Interface Concept</h2>
                   <p class="card-description">App</p>
@@ -97,12 +102,16 @@
             </li>
             <li class="card-item">
               <a href="#" class="link link-card">
+                  <div class="card-img-wrapper">
                 <img
                   src="./images/CashlessPayment.jpg"
                   alt="Cashless Payment"
                   width="360"
                   height="300"
                 />
+                 <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+                </div>
                 <div class="card-item-name">
                   <h2 class="card-title">Cashless Payment</h2>
                   <p class="card-description">Marketing</p>
@@ -111,7 +120,11 @@
             </li>
             <li class="card-item">
               <a href="#" class="link link-card"
-                ><img src="./images/MeditationApp.jpg" alt="Meditaion App" />
+                >
+                  <div class="card-img-wrapper"><img src="./images/MeditationApp.jpg" alt="Meditaion App" />
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+                </div>
                 <div class="card-item-name">
                   <h2 class="card-title">Meditaion App</h2>
                   <p class="card-description">App</p>
@@ -120,12 +133,16 @@
             </li>
             <li class="card-item">
               <a href="#" class="link link-card">
-                <img
+               
+                 <div class="card-img-wrapper"> <img
                   src="./images/TaxiService.jpg"
                   alt="Taxi Service"
                   width="360"
                   height="300"
                 />
+                 <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+                </div>
                 <div class="card-item-name">
                   <h2 class="card-title">Taxi Service</h2>
                   <p class="card-description">Marketing</p>
@@ -134,12 +151,16 @@
             </li>
             <li class="card-item">
               <a href="#" class="link link-card"
-                ><img
+                >
+                  <div class="card-img-wrapper"><img
                   src="./images/ScreenIllustrations.jpg"
                   alt="Screen Illustrations"
                   width="360"
                   height="300"
                 />
+                 <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+                </div>
                 <div class="card-item-name">
                   <h2 class="card-title">Screen Illustrations</h2>
                   <p class="card-description">Design</p>
@@ -148,12 +169,16 @@
             </li>
             <li class="card-item">
               <a href="#" class="link link-card">
-                <img
+                
+                  <div class="card-img-wrapper"><img
                   src="./images/OnlineCourses.jpg"
                   alt="Online Courses"
                   width="360"
                   height="300"
                 />
+                 <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+                </div>
                 <div class="card-item-name">
                   <h2 class="card-title">Online Courses</h2>
                   <p class="card-description">Marketing</p>
@@ -162,12 +187,16 @@
             </li>
             <li class="card-item">
               <a href="#" class="link link-card"
-                ><img
+                >
+                  <div class="card-img-wrapper"><img
                   src="./images/InstagramStories.jpg"
                   alt="Instagram Stories Concept"
                   width="360"
                   height="300"
                 />
+                 <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+                </div>
                 <div class="card-item-name">
                   <h2 class="card-title">Instagram Stories Concept</h2>
                   <p class="card-description">Design</p>
@@ -176,12 +205,17 @@
             </li>
             <li class="card-item">
               <a href="#" class="link link-card">
-                <img
+                  <div class="card-img-wrapper">
+
+               <img
                   src="./images/OrganicFood.jpg"
                   alt="Organic Food"
                   width="360"
                   height="300"
                 />
+                 <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+                   </div>
                 <div class="card-item-name">
                   <h2 class="card-title">Organic Food</h2>
                   <p class="card-description">Web Site</p>
@@ -190,12 +224,17 @@
             </li>
             <li class="card-item">
               <a href="#" class="link link-card"
-                ><img
+                > 
+                 <div class="card-img-wrapper">
+                  <img
                   src="./images/FreshCoffee.jpg"
                   alt="Fresh Coffee"
                   width="360"
                   height="300"
                 />
+                 <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+                   </div>
                 <div class="card-item-name">
                   <h2 class="card-title">Fresh Coffee</h2>
                   <p class="card-description">Web Site</p>
