Edits active pages, modal window

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,9 @@
               <a class="menu-link link" href="./index.html">Studio</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+              <a class="menu-link link current" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="menu-item">
               <a class="menu-link link" href="#">Contacts</a>
@@ -82,18 +84,20 @@
 
           <ul class="list card-list">
             <li class="card-item">
-              <a href="#" class="link link-card"
-                >
+              <a href="#" class="link link-card">
                 <div class="card-img-wrapper">
-                 <img
-                  src="./images/BankingApp.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                  height="300"
-                />
-                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-                </p>
-                </div> 
+                  <img
+                    src="./images/BankingApp.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-item-name">
                   <h2 class="card-title">Banking App Interface Concept</h2>
                   <p class="card-description">App</p>
@@ -102,15 +106,18 @@
             </li>
             <li class="card-item">
               <a href="#" class="link link-card">
-                  <div class="card-img-wrapper">
-                <img
-                  src="./images/CashlessPayment.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
-                 <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-                </p>
+                <div class="card-img-wrapper">
+                  <img
+                    src="./images/CashlessPayment.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="card-item-name">
                   <h2 class="card-title">Cashless Payment</h2>
@@ -119,11 +126,14 @@
               >
             </li>
             <li class="card-item">
-              <a href="#" class="link link-card"
-                >
-                  <div class="card-img-wrapper"><img src="./images/MeditationApp.jpg" alt="Meditaion App" />
-                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-                </p>
+              <a href="#" class="link link-card">
+                <div class="card-img-wrapper">
+                  <img src="./images/MeditationApp.jpg" alt="Meditaion App" />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="card-item-name">
                   <h2 class="card-title">Meditaion App</h2>
@@ -133,15 +143,18 @@
             </li>
             <li class="card-item">
               <a href="#" class="link link-card">
-               
-                 <div class="card-img-wrapper"> <img
-                  src="./images/TaxiService.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
-                 <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-                </p>
+                <div class="card-img-wrapper">
+                  <img
+                    src="./images/TaxiService.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="card-item-name">
                   <h2 class="card-title">Taxi Service</h2>
@@ -150,16 +163,19 @@
               >
             </li>
             <li class="card-item">
-              <a href="#" class="link link-card"
-                >
-                  <div class="card-img-wrapper"><img
-                  src="./images/ScreenIllustrations.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
-                 <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-                </p>
+              <a href="#" class="link link-card">
+                <div class="card-img-wrapper">
+                  <img
+                    src="./images/ScreenIllustrations.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="card-item-name">
                   <h2 class="card-title">Screen Illustrations</h2>
@@ -169,15 +185,18 @@
             </li>
             <li class="card-item">
               <a href="#" class="link link-card">
-                
-                  <div class="card-img-wrapper"><img
-                  src="./images/OnlineCourses.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
-                 <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-                </p>
+                <div class="card-img-wrapper">
+                  <img
+                    src="./images/OnlineCourses.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="card-item-name">
                   <h2 class="card-title">Online Courses</h2>
@@ -186,16 +205,19 @@
               >
             </li>
             <li class="card-item">
-              <a href="#" class="link link-card"
-                >
-                  <div class="card-img-wrapper"><img
-                  src="./images/InstagramStories.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                  height="300"
-                />
-                 <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-                </p>
+              <a href="#" class="link link-card">
+                <div class="card-img-wrapper">
+                  <img
+                    src="./images/InstagramStories.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="card-item-name">
                   <h2 class="card-title">Instagram Stories Concept</h2>
@@ -205,17 +227,19 @@
             </li>
             <li class="card-item">
               <a href="#" class="link link-card">
-                  <div class="card-img-wrapper">
-
-               <img
-                  src="./images/OrganicFood.jpg"
-                  alt="Organic Food"
-                  width="360"
-                  height="300"
-                />
-                 <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-                </p>
-                   </div>
+                <div class="card-img-wrapper">
+                  <img
+                    src="./images/OrganicFood.jpg"
+                    alt="Organic Food"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-item-name">
                   <h2 class="card-title">Organic Food</h2>
                   <p class="card-description">Web Site</p>
@@ -223,18 +247,20 @@
               >
             </li>
             <li class="card-item">
-              <a href="#" class="link link-card"
-                > 
-                 <div class="card-img-wrapper">
+              <a href="#" class="link link-card">
+                <div class="card-img-wrapper">
                   <img
-                  src="./images/FreshCoffee.jpg"
-                  alt="Fresh Coffee"
-                  width="360"
-                  height="300"
-                />
-                 <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-                </p>
-                   </div>
+                    src="./images/FreshCoffee.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-item-name">
                   <h2 class="card-title">Fresh Coffee</h2>
                   <p class="card-description">Web Site</p>
