--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           >
           <ul class="menu-list list">
             <li class="menu-item">
-              <a class="menu-link studio link" href="./index.html">Studio</a>
+              <a class="menu-link current link" href="./index.html">Studio</a>
             </li>
             <li class="menu-item">
               <a class="menu-link link" href="./portfolio.html">Portfolio</a>
@@ -61,7 +61,9 @@
           Effective Solutions <br />
           for Your Business
         </h1>
-        <button class="modal-button" type="button">Order Service</button>
+        <button class="modal-button" type="button" data-modal-open>
+          Order Service
+        </button>
       </section>
 
       <!-- ADVANTAGES -->
@@ -430,13 +432,18 @@
       </div>
     </footer>
 
-       <!-- Modal window -->
+    <!-- Modal window -->
 
-    <div class="backdrop">
+    <div class="backdrop" data-modal>
       <div class="modal">
-         <button type="button" class="modal-close-btn"> </button>
+        <button type="button" class="modal-close-btn" data-modal-close>
+          <svg class="modal-close-btn-icon" width="8px" height="8px">
+            <use href="./images/icons.svg#icon-close-modal"></use>
+          </svg>
+        </button>
       </div>
-
     </div>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
