--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
 
     <!-- Modal window -->
 
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="modal-close-btn-icon" width="8px" height="8px">
