--- a/index.html
+++ b/index.html
@@ -429,6 +429,27 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe-footer-wrapper">
+          <p class="subscribe-footer-title">Subscribe</p>
+          <form class="subscribe-footer-form">
+            <input
+              type="email"
+              name="user-email"
+              class="subscribe-footer-input"
+              placeholder="E-mail"
+            />
+            <button type="submit" class="subscribe-footer-btn">
+              Subscribe
+              <svg
+                class="subscribe-footer-media-icon"
+                width="24px"
+                height="24px"
+              >
+                <use href="./images/icons.svg#icon-subscribe"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
 
@@ -441,6 +462,73 @@
             <use href="./images/icons.svg#icon-close-modal"></use>
           </svg>
         </button>
+
+        <p class="modal-form-title">
+          Leave your contacts and we will call you back
+        </p>
+        <form class="modal-form">
+          <label class="modal-form-label">
+            <span class="modal-form-label-description">Name</span>
+            <span class="modal-form-input-wrapper">
+              <input
+                type="text"
+                name="user_name"
+                class="modal-form-input"
+                required
+                pattern="^[a-zA-Zа-яА-Я]+$"
+                minlength="2"
+              />
+              <svg class="modal-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person-modal-window"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-label">
+            <span class="modal-form-label-description">Phone</span>
+            <span class="modal-form-input-wrapper">
+              <input
+                type="tel"
+                name="user_tel"
+                class="modal-form-input"
+                required
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx"
+              />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone-modal-window"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-label">
+            <span class="modal-form-label-description">Email</span>
+            <span class="modal-form-input-wrapper">
+              <input type="email" name="user-email" class="modal-form-input" />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email-modal-window"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-label-textarea">
+            <span class="modal-form-label-description">Comment</span>
+            <textarea
+              class="modal-form-textarea"
+              placeholder="Text input"
+              name="user-message"
+            ></textarea>
+          </label>
+          <input
+            type="checkbox"
+            name="user-policy"
+            class="modal-form-check hidden-title"
+            id="user-policy"
+          />
+          <label for="user-policy" class="modal-form-check-description">
+            I accept the terms and conditions of the &nbsp;<a href="">
+              Privacy Policy
+            </a>
+          </label>
+          <button type="submit" class="modal-form-btn-submit">Send</button>
+        </form>
       </div>
     </div>
 
