make footer subscribe in css

--- a/portfolio.html
+++ b/portfolio.html
@@ -274,7 +274,7 @@
 
     <!-- Footer -->
 
-    <footer class="footer">
+     <footer class="footer">
       <div class="container footer-common-contain">
         <div class="footer-contain-first">
           <a class="link logo-footer" href="./index.html" title="Web Studio"
@@ -316,6 +316,27 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="subscribe-footer-wrapper">
+          <p class="subscribe-footer-title">Subscribe</p>
+          <form class="subscribe-footer-form">
+            <input
+              type="email"
+              name="user-email"
+              class="subscribe-footer-input"
+              placeholder="E-mail"
+            />
+            <button type="submit" class="subscribe-footer-btn">
+              Subscribe
+              <svg
+                class="subscribe-footer-media-icon"
+                width="24px"
+                height="24px"
+              >
+                <use href="./images/icons.svg#icon-subscribe"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
