Edits mistakes in homework 6

--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
           <label class="modal-form-label">
             <span class="modal-form-label-description">Name</span>
             <span class="modal-form-input-wrapper">
-              <input
+              <input 
                 type="text"
                 name="user_name"
                 class="modal-form-input"
@@ -523,7 +523,7 @@
             id="user-policy"
           />
           <label for="user-policy" class="modal-form-check-description">
-            I accept the terms and conditions of the &nbsp;<a href="">
+            I accept the terms and conditions of the &nbsp;<a class="policy-link" href="">
               Privacy Policy
             </a>
           </label>
