--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/mobile.css" />
+    <!-- <link rel="stylesheet" href="./css/index.css" /> -->
   </head>
   <body>
     <!-- HEADER -->
@@ -50,12 +51,21 @@
             >
           </li>
         </ul>
+       
+          <button  type="button" class="mobile-menu-btn">
+            <svg class="mobile-menu-icon" width="32" height="22">
+              <use href="./images/icons.svg#icon-menu-open-icon"></use>
+            </svg>
+          </button>
+        
       </div>
+
+
     </header>
 
     <!-- HERO -->
 
-    <main>
+    <!-- <main>
       <section class="hero">
         <h1 class="hero-title">
           Effective Solutions <br />
@@ -64,11 +74,11 @@
         <button class="modal-button" type="button" data-modal-open>
           Order Service
         </button>
-      </section>
+      </section> -->
 
       <!-- ADVANTAGES -->
 
-      <section class="advantage-section">
+      <!-- <section class="advantage-section">
         <h2 class="hidden-title">Our advantages</h2>
         <div class="container">
           <ul class="advantages-list list">
@@ -122,11 +132,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- ABOUT -->
 
-      <section class="section activity">
+      <!-- <section class="section activity">
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="activity-list list">
@@ -156,10 +166,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- TEAM -->
-      <section class="team-section section">
+      <!-- <section class="team-section section">
         <div class="container">
           <h2 class="section-title">Our team</h2>
           <ul class="team-list list">
@@ -330,11 +340,11 @@
           </ul>
         </div>
       </section>
-    </main>
+    </main> -->
 
     <!-- --Customers-- -->
 
-    <section class="section">
+    <!-- <section class="section">
       <div class="container">
         <h2 class="section-title">Customers</h2>
         <ul class="clients-list list">
@@ -382,11 +392,11 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
     <!-- Footer -->
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-common-contain">
         <div class="footer-contain-first">
           <a class="link logo-footer" href="./index.html" title="Web Studio"
@@ -451,11 +461,11 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- Modal window -->
 
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="modal-close-btn-icon" width="8px" height="8px">
@@ -532,6 +542,6 @@
       </div>
     </div>
 
-    <script src="./js/modal.js"></script>
+    <script src="./js/modal.js"></script> -->
   </body>
 </html>
