--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
     <header class="border-top">
       <div class="container page-header-container">
+        <a class="link logo" href="./index.html" title="Web Studio"
+        ><span>Web</span>Studio</a
+      >
         <nav class="page-nav">
-          <a class="link logo" href="./index.html" title="Web Studio"
-            ><span>Web</span>Studio</a
-          >
-          <ul class="menu-list list">
+            <ul class="menu-list list">
             <li class="menu-item">
               <a class="menu-link current link" href="./index.html">Studio</a>
             </li>
@@ -41,13 +41,13 @@
           </ul>
         </nav>
         <ul class="contact-list list">
-          <li class="contact-mail">
-            <a class="contact-item link" href="mailto:info@devstudio.com"
+          <li class="contact-item">
+            <a class="contact-mail link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="contact-tel">
-            <a class="contact-item link" href="tel:+11(000)111-11-11"
+          <li class="contact-item">
+            <a class="contact-tel link" href="tel:+11(000)111-11-11"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -122,16 +122,16 @@
 
     <!-- HERO -->
 
-    <!-- <main>
+    <main>
       <section class="hero">
-        <h1 class="hero-title">
+               <h1 class="hero-title">
           Effective Solutions <br />
           for Your Business
         </h1>
         <button class="modal-button" type="button" data-modal-open>
           Order Service
         </button>
-      </section> -->
+          </section>
 
       <!-- ADVANTAGES -->
 
