--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
           <button  type="button" class="mobile-menu-open-btn" data-menu-open>
             <svg class="mobile-menu-icon" width="32" height="22">
-              <use href="./images/icons.svg#icon-menu-open-icon"></use>
+              <use href=“./images/icons.svg#mobile-menu”></use>            
             </svg>
           </button>
         </div>
@@ -135,67 +135,67 @@
 
       <!-- ADVANTAGES -->
 
-      <!-- <section class="advantage-section">
+      <section class="advantage-section">
         <h2 class="hidden-title">Our advantages</h2>
-        <div class="container">
-          <ul class="advantages-list list">
-            <li class="advantages-items">
-              <div class="icon">
-                <svg class="icon-item" width="64px" height="64px">
+        <div class="container page-advantage-container">
+          <ul class="advantage-list list">
+            <li class="advantage-item">
+              <div class="advantage-icon">
+                <svg class="advantage-icon-item" width="64px" height="64px">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="suptitle">Strategy</h3>
-              <p class="description-section">
+              <h3 class="advantage-suptitle">Strategy</h3>
+              <p class="advantage-description">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="advantages-items">
-              <div class="icon">
-                <svg class="icon-item" width="64px" height="64px">
+            <li class="advantage-item">
+              <div class="advantage-icon">
+                <svg class="advantage-icon-item" width="64px" height="64px">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="suptitle">Punctuality</h3>
-              <p class="description-section">
+              <h3 class="advantage-suptitle">Punctuality</h3>
+              <p class="advantage-description">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="advantages-items">
-              <div class="icon">
-                <svg class="icon-item" width="64px" height="64px">
+            <li class="advantage-item">
+              <div class="advantage-icon">
+                <svg class="advantage-icon-item" width="64px" height="64px">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="suptitle">Diligence</h3>
-              <p class="description-section">
+              <h3 class="advantage-suptitle">Diligence</h3>
+              <p class="advantage-description">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="advantages-items">
-              <div class="icon">
-                <svg class="icon-item" width="64px" height="64px">
+            <li class="advantage-item">
+              <div class="advantage-icon">
+                <svg class="advantage-icon-item" width="64px" height="64px">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="suptitle">Technologies</h3>
-              <p class="description-section">
+              <h3 class="advantage-suptitle">Technologies</h3>
+              <p class="advantage-description">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- ABOUT -->
 
-      <!-- <section class="section activity">
-        <div class="container">
-          <h2 class="section-title">What are we doing</h2>
+      <section class="section activity">
+        <div class="container activity-wrapper">
+          <h2 class="section-title activity-title">What are we doing</h2>
           <ul class="activity-list list">
             <li class="activity-item">
               <img
@@ -223,10 +223,11 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- TEAM -->
-      <!-- <section class="team-section section">
+      
+      <section class="team-section section">
         <div class="container">
           <h2 class="section-title">Our team</h2>
           <ul class="team-list list">
@@ -237,7 +238,8 @@
                 width="264"
                 height="260"
               />
-              <div class="team-title-description">
+
+              <div class="team-text-wrapper">
                 <h3 class="team-title suptitle"><b>Mark Guerrero</b></h3>
                 <p class="description-section">Product Designer</p>
                 <ul class="social-media-list list">
@@ -278,7 +280,7 @@
                 width="264"
                 height="260"
               />
-              <div class="team-title-description">
+              <div class="team-text-wrapper">
                 <h3 class="team-title suptitle"><b>Tom Ford</b></h3>
                 <p class="description-section">Frontend Developer</p>
                 <ul class="social-media-list list">
@@ -319,7 +321,7 @@
                 width="264"
                 height="260"
               />
-              <div class="team-title-description">
+              <div class="team-text-wrapper">
                 <h3 class="team-title suptitle"><b>Camila Garcia</b></h3>
                 <p class="description-section">Marketing</p>
                 <ul class="social-media-list list">
@@ -360,7 +362,7 @@
                 width="264"
                 height="260"
               />
-              <div class="team-title-description">
+              <div class="team-text-wrapper">
                 <h3 class="team-title suptitle"><b>Daniel Wilson</b></h3>
                 <p class="description-section">UI Designer</p>
                 <ul class="social-media-list list">
@@ -396,8 +398,8 @@
             </li>
           </ul>
         </div>
-      </section>
-    </main> -->
+      </section> 
+
 
     <!-- --Customers-- -->
 
@@ -450,6 +452,7 @@
         </ul>
       </div>
     </section> -->
+    </main>
 
     <!-- Footer -->
 
