--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
   <body>
     <!-- HEADER -->
 
-    <header class="border-top">
-      <div class="container page-header-container">
-        <a class="link logo" href="./index.html" title="Web Studio"
-        ><span>Web</span>Studio</a
-      >
+    <header class="header-section">
+      <div class="container page-header-wrapper">
+        <a class="link logo" href="./index.html" title="Web Studio">
+        <span>Web</span>Studio
+        </a>
         <nav class="page-nav">
             <ul class="menu-list list">
             <li class="menu-item">
@@ -55,12 +55,12 @@
 
        <!-- MOBILE MENU BUTTON OPEN -->
 
-          <button  type="button" class="mobile-menu-open-btn" data-menu-open>
+        <button  type="button" class="mobile-menu-open-btn" data-menu-open>
             <svg class="mobile-menu-icon" width="32" height="22">
-              <use href=“./images/icons.svg#mobile-menu”></use>            
+              <use href=“./images/icons.svg#icon-mobile-menu-btn”></use>            
             </svg>
           </button>
-        </div>
+      </div>
         
 <!-- MOBILE MENU WINDOW -->
 
@@ -134,7 +134,7 @@
           </section>
 
       <!-- ADVANTAGES -->
-
+<!-- 
       <section class="advantage-section">
         <h2 class="hidden-title">Our advantages</h2>
         <div class="container page-advantage-container">
@@ -223,11 +223,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- TEAM -->
       
-      <section class="team-section section">
+      <!-- <section class="team-section section">
         <div class="container">
           <h2 class="section-title">Our team</h2>
           <ul class="team-list list">
@@ -398,51 +398,51 @@
             </li>
           </ul>
         </div>
-      </section> 
+      </section>  -->
 
 
     <!-- --Customers-- -->
 
-    <!-- <section class="section">
+    <!-- <section class="section section-customers">
       <div class="container">
         <h2 class="section-title">Customers</h2>
         <ul class="clients-list list">
           <li class="clients-item">
             <a href="" class="clients-item-link link">
-              <svg class="clients-icon">
+              <svg class="clients-icon" width="110" height="56">
                 <use href="./images/icons.svg#icon-clients-first"></use>
               </svg>
             </a>
           </li>
           <li class="clients-item">
             <a href="" class="clients-item-link link">
-              <svg class="clients-icon">
+              <svg class="clients-icon"  width="110" height="56">
                 <use href="./images/icons.svg#icon-clients-second"></use>
               </svg>
             </a>
           </li>
           <li class="clients-item">
             <a href="" class="clients-item-link link">
-              <svg class="clients-icon">
+              <svg class="clients-icon"  width="110" height="56">
                 <use href="./images/icons.svg#icon-clients-third"></use>
               </svg>
             </a>
           </li>
           <li class="clients-item">
             <a href="" class="clients-item-link link">
-              <svg class="clients-icon">
+              <svg class="clients-icon"  width="110" height="56">
                 <use href="./images/icons.svg#icon-clients-fourth"></use>
               </svg>
             </a>
           </li>
           <li class="clients-item">
             <a href="" class="clients-item-link link">
-              <svg class="clients-icon">
+              <svg class="clients-icon"  width="110" height="56">
                 <use href="./images/icons.svg#icon-clients-fifth"></use>
               </svg>
             </a>
           </li>
-          <li class="clients-item">
+          <li class="clients-item"  width="110" height="56">
             <a href="" class="clients-item-link link">
               <svg class="clients-icon">
                 <use href="./images/icons.svg#icon-clients-six"></use>
@@ -451,8 +451,8 @@
           </li>
         </ul>
       </div>
-    </section> -->
-    </main>
+    </section>
+    </main> -->
 
     <!-- Footer -->
 
