--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <button  type="button" class="mobile-menu-open-btn" data-menu-open>
             <svg class="mobile-menu-icon" width="32" height="22">
-              <use href=“./images/icons.svg#icon-mobile-menu-btn”></use>            
+              <use href=“./images/icons.svg#icon-mobile-menu-open-btn”></use>            
             </svg>
           </button>
       </div>
