makes footer tablet

--- a/index.html
+++ b/index.html
@@ -453,11 +453,11 @@
     </main>
 
     <!-- Footer -->
-
+ 
     <footer class="footer-section">
       <div class="container footer-wrapper-common">
         <div class="footer-wrapper-logo">
-          <a class="link logo-footer" href="./index.html" title="Web Studio"
+          <a class="link logo-footer subtitle-footer" href="./index.html" title="Web Studio"
             ><span>Web</span>Studio</a
           >
           <p class="footer-text">
@@ -466,7 +466,7 @@
           </p>
         </div>
         <div class="footer-wrapper-socialmedia">
-          <p class="footer-media-text">Social media</p>
+          <p class="footer-media-text subtitle-footer">Social media</p>
           <ul class="footer-socialmedia-list list">
             <li class="footer-socialmedia-item">
               <a href="#" class="footer-media-link link">
@@ -499,7 +499,7 @@
           </ul>
         </div>
         <div class="footer-wrapper-subscribe">
-          <p class="subscribe-footer-title">Subscribe</p>
+          <p class="subscribe-footer-title subtitle-footer">Subscribe</p>
           <form class="subscribe-footer-form">
             <input
               type="email"
@@ -520,7 +520,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> 
 
     <!-- Modal window -->
 <!-- 
