Makes modal form

--- a/index.html
+++ b/index.html
@@ -523,8 +523,8 @@
     </footer> 
 
     <!-- Modal window -->
-<!-- 
-    <div class="backdrop is-hidden" data-modal>
+
+    <di class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="modal-close-btn-icon" width="8px" height="8px">
@@ -600,9 +600,9 @@
         </form>
       </div>
     </div>
- -->
+ 
  <script src="./js/mobile-menu.js"></script>
 
-   <!-- <script src="./js/modal.js"></script>  -->
+   <script src="./js/modal.js"></script> 
   </body>
 </html>
