--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               >info@devstudio.com</a
             >
           </li>
-          <li class="contact-item">
+          <li class="contact-item ">
             <a class="contact-tel link" href="tel:+11(000)111-11-11"
               >+11 (000) 111-11-11</a
             >
@@ -76,7 +76,7 @@
   <ul class="mobile-menu-list-link list">
     <li class="mobile-menu-item-link"><a class="link link-mobile-menu" href="./index.html">Studio</a></li>
     <li class="mobile-menu-item-link"><a class="link link-mobile-menu" href="./portfolio.html">Potfolio</a></li>
-    <li class="mobile-menu-item-link"><a class="link link-mobile-menu" href="">Contacts</a></li>
+    <li class="mobile-menu-item-link"><a class="link link-mobile-menu active" href="">Contacts</a></li>
   </ul>
 </nav>
 <ul class="mobile-menu-contacts-list list">
@@ -232,7 +232,8 @@
           <ul class="team-list list">
             <li class="team-item">
               <img
-                src="./images/productdesigner.jpg"
+              srcset="./images/adaptive/productdesigner@2x.jpg"
+                src="./images/adaptive/productdesigner.jpg"
                 alt="Product Designer"
                 width="264"
                 height="260"
@@ -273,7 +274,8 @@
             </li>
             <li class="team-item">
               <img
-                src="./images/frontenddeveloper.jpg"
+                srcset="./images/adaptive/frontenddeveloper@2x.jpg"
+                src="./images/adaptive/frontenddeveloper.jpg"
                 alt="Frontend Developer"
                 width="264"
                 height="260"
@@ -314,7 +316,8 @@
             </li>
             <li class="team-item">
               <img
-                src="./images/marketing.jpg"
+                scrset="./images/adaptive/marketing@2x.jpg"
+                src="./images/adaptive/marketing.jpg"
                 alt="Marketing"
                 width="264"
                 height="260"
@@ -355,7 +358,8 @@
             </li>
             <li class="team-item">
               <img
-                src="./images/uidesigner.jpg"
+              srcset="./images/adaptive/uidesigner@2x.jpg"
+                src="./images/adaptive/uidesigner.jpg"
                 alt="Маркетолог"
                 width="264"
                 height="260"
