Mobile menu edit

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
     </button>
 <nav>
   <ul class="mobile-menu-list-link list">
-    <li class="mobile-menu-item-link"><a class="link link-mobile-menu" href="./index.html">Studio</a></li>
+    <li class="mobile-menu-item-link"><a class="link link-mobile-menu active" href="./index.html">Studio</a></li>
     <li class="mobile-menu-item-link"><a class="link link-mobile-menu" href="./portfolio.html">Potfolio</a></li>
-    <li class="mobile-menu-item-link"><a class="link link-mobile-menu active" href="">Contacts</a></li>
+    <li class="mobile-menu-item-link"><a class="link link-mobile-menu" href="">Contacts</a></li>
   </ul>
 </nav>
 <ul class="mobile-menu-contacts-list list">
@@ -239,7 +239,7 @@
                 height="260"
               />
               <div class="team-text-wrapper">
-                <h3 class="team-title suptitle"><b>Mark Guerrero</b></h3>
+                <h3 class="team-title suptitle">Mark Guerrero</h3>
                 <p class="description-team">Product Designer</p>
                 <ul class="social-media-list list">
                   <li class="social-media-item">
@@ -281,32 +281,32 @@
                 height="260"
               />
               <div class="team-text-wrapper">
-                <h3 class="team-title suptitle"><b>Tom Ford</b></h3>
+                <h3 class="team-title suptitle">Tom Ford</h3>
                 <p class="description-team">Frontend Developer</p>
                 <ul class="social-media-list list">
                   <li class="social-media-item">
                     <a href="#" class="social-media-link link">
-                      <svg class="social-media-icon" width="16px" height="16px">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
                     <a href="" class="social-media-link">
-                      <svg class="social-media-icon" width="16px" height="16px">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
                     <a href="" class="social-media-link">
-                      <svg class="social-media-icon" width="16px" height="16px">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li class="social-media-item">
                     <a href="" class="social-media-link">
-                      <svg class="social-media-icon" width="16px" height="16px">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -323,32 +323,32 @@
                 height="260"
               />
               <div class="team-text-wrapper">
-                <h3 class="team-title suptitle"><b>Camila Garcia</b></h3>
+                <h3 class="team-title suptitle">Camila Garcia</h3>
                 <p class="description-team">Marketing</p>
                 <ul class="social-media-list list">
                   <li class="social-media-item">
                     <a href="#" class="social-media-link link">
-                      <svg class="social-media-icon" width="16px" height="16px">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
                     <a href="" class="social-media-link">
-                      <svg class="social-media-icon" width="16px" height="16px">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
                     <a href="" class="social-media-link">
-                      <svg class="social-media-icon" width="16px" height="16px">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li class="social-media-item">
                     <a href="" class="social-media-link">
-                      <svg class="social-media-icon" width="16px" height="16px">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -365,32 +365,32 @@
                 height="260"
               />
               <div class="team-text-wrapper">
-                <h3 class="team-title suptitle"><b>Daniel Wilson</b></h3>
+                <h3 class="team-title suptitle">Daniel Wilson</h3>
                 <p class="description-team">UI Designer</p>
                 <ul class="social-media-list list">
                   <li class="social-media-item">
                     <a href="#" class="social-media-link link">
-                      <svg class="social-media-icon" width="16px" height="16px">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
                     <a href="" class="social-media-link">
-                      <svg class="social-media-icon" width="16px" height="16px">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
                     <a href="" class="social-media-link">
-                      <svg class="social-media-icon" width="16px" height="16px">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li class="social-media-item">
                     <a href="" class="social-media-link">
-                      <svg class="social-media-icon" width="16px" height="16px">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -481,21 +481,21 @@
             </li>
             <li class="footer-socialmedia-item">
               <a href="" class="footer-media-link">
-                <svg class="social-media-icon" width="24" height="24">
+                <svg class="footer-media-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socialmedia-item">
               <a href="" class="footer-media-link">
-                <svg class="social-media-icon" width="24" height="24">
+                <svg class="footer-media-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>          
               </a>
             </li>
             <li class="footer-socialmedia-item">
               <a href="" class="footer-media-link">
-                <svg class="social-media-icon" width="24" height="24">
+                <svg class="footer-media-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
