Final edit mobile menu

--- a/index.html
+++ b/index.html
@@ -72,13 +72,16 @@
         <use href="./images/icons.svg#icon-close-modal"></use>
       </svg>
     </button>
-<nav>
+<div class="wrapper-mobile-navigation">
+    <nav>
   <ul class="mobile-menu-list-link list">
     <li class="mobile-menu-item-link"><a class="link link-mobile-menu active" href="./index.html">Studio</a></li>
     <li class="mobile-menu-item-link"><a class="link link-mobile-menu" href="./portfolio.html">Potfolio</a></li>
     <li class="mobile-menu-item-link"><a class="link link-mobile-menu" href="">Contacts</a></li>
   </ul>
 </nav>
+</div>
+<div class="wrapper-mobile-contacts">
 <ul class="mobile-menu-contacts-list list">
 <li class="mobile-menu-contacts-item"><a class="link mobile-menu-tel" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
 <li class="mobile-menu-contacts-item"><a class="link mobile-menu-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
@@ -112,6 +115,7 @@
   </a>
 </li>
 </ul>
+</div>
 </div>
     </div>
   </header>
